--- a/lotto/templates/lotto/index.html
+++ b/lotto/templates/lotto/index.html
@@ -1,1 +1,13 @@
-<h1>Lotto</h1>
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+<div class="page-header">
+    <h1>My Lotto Page</h1>
+</div>
+{% for lotto in lottos %}
+<div class="container lotto">
+    <h2>{{ lotto.name }}</h2>
+    <p>{{ lotto.update_date }}</p>
+    <p>{{ lotto.lottos }}</p>
+</div>
+{% endfor %}
