--- a/lotto/templates/lotto/index.html
+++ b/lotto/templates/lotto/index.html
@@ -17,11 +17,22 @@
 <script type="text/javascript"
         src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=ed0f2be497f2e785bba39426b4320c0c"></script>
 <script>
-var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+var container = document.getElementById('map');
+//지도를 담을 영역의 DOM 레퍼런스
 var options = { //지도를 생성할 때 필요한 기본 옵션
 	center: new daum.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
 	level: 3 //지도의 레벨(확대, 축소 정도)
 };
+var map = new daum.maps.Map(container, options);
+//지도 생성 및 객체 리턴
 
-var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
+// 마커가 표시될 위치입니다
+var markerPosition  = new daum.maps.LatLng(33.450701, 126.570667);
+// 마커를 생성합니다
+var marker = new daum.maps.Marker({
+    position: markerPosition
+});
+// 마커가 지도 위에 표시되도록 설정합니다
+marker.setMap(map);
+
 </script>
