--- a/lotto/templates/lotto/index.html
+++ b/lotto/templates/lotto/index.html
@@ -20,14 +20,14 @@
 var container = document.getElementById('map');
 //지도를 담을 영역의 DOM 레퍼런스
 var options = { //지도를 생성할 때 필요한 기본 옵션
-	center: new daum.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
+	center: new daum.maps.LatLng({{location.lat}}, {{location.lng}}), //지도의 중심좌표.
 	level: 3 //지도의 레벨(확대, 축소 정도)
 };
 var map = new daum.maps.Map(container, options);
 //지도 생성 및 객체 리턴
 
 // 마커가 표시될 위치입니다
-var markerPosition  = new daum.maps.LatLng(33.450701, 126.570667);
+var markerPosition  = new daum.maps.LatLng({{location.lat}}, {{location.lng}});
 // 마커를 생성합니다
 var marker = new daum.maps.Marker({
     position: markerPosition
