--- a/lotto/templates/lotto/join.html
+++ b/lotto/templates/lotto/join.html
@@ -1,8 +1,26 @@
 <form action = "" method="post">
     {% csrf_token %}
     아이디 : <input type="text" name="id"><br>
+    <input type = "button" value="중복확인" onclick="id_check()">
     비밀번호 : <input type="password" name="pw"><br>
     이름 : <input type="text" name = "name"><br>
     <input type = "submit">
 
 </form>
+
+{% load static %}
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script>
+    function id_check(){
+
+        id = $('input[name=id]').val()
+        $.ajax({
+            url: '/lotto/id_check',
+            type: 'post',
+            data: {'id':id},
+            success: function(res) {
+
+        }
+    })
+   }
+</script>
