로또 아이디 중복검사 Ajax 활용+alert에 Json 반영

--- a/lotto/templates/lotto/join.html
+++ b/lotto/templates/lotto/join.html
@@ -19,7 +19,7 @@
             type: 'post',
             data: {'id':id},
             success: function(res) {
-                alert(res)
+                alert(res.msg + res.id)
         }
     })
    }
