--- a/lotto/templates/lotto/index.html
+++ b/lotto/templates/lotto/index.html
@@ -9,13 +9,13 @@
 <div class="container lotto">
     <h2>
         <!--파라미터방식-->
-        <a href="detail?lotto_num={{lotto.id}}">
+        <a href="{% url 'detail' %}?lotto_num={{lotto.id}}">
         {{ lotto.name }}
         </a>
     </h2>
     <p>
         <!--파라미터말고 다른방식-->
-        <a href="detail/{{lotto.id}}">
+        <a href="{% url 'detail2' num={{lotto.id}} %}">
         {{ lotto.update_date }}
         </a>
     </p>
