--- a/lotto/templates/lotto/index.html
+++ b/lotto/templates/lotto/index.html
@@ -15,7 +15,7 @@
     </h2>
     <p>
         <!--파라미터말고 다른방식-->
-        <a href="{% url 'detail2' num={{lotto.id}} %}">
+        <a href="{% url 'detail2' num=lotto.id %}">
         {{ lotto.update_date }}
         </a>
     </p>
