로또 회원가입 입력창 최종

--- a/lotto/templates/lotto/join.html
+++ b/lotto/templates/lotto/join.html
@@ -17,7 +17,7 @@
         ct = $('input[name=csrfmiddlewaretoken]').val()
         $.ajax({
             // url: '/lotto/id_check',
-            url: '{% url 'join' %}',
+            url: '{% url 'id_check' %}',
             type: 'post',
             data: {'id':id,
             'csrfmiddlewaretoken' : ct
